# sttify

./: CMakeLists.txt
src/: mainwindow.cpp  mainwindow.h
