cmake_minimum_required(VERSION 3.19)
project(sttify LANGUAGES CXX)

find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)

qt_standard_project_setup()

qt_add_executable(sttify
    WIN32 MACOSX_BUNDLE



    src/main.cpp src/mainwindow.cpp src/mainwindow.h
)

target_link_libraries(sttify
    PRIVATE
        Qt::Core
        Qt::Widgets
)

install(TARGETS sttify
    BUNDLE  DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

qt_generate_deploy_app_script(
    TARGET sttify
    OUTPUT_SCRIPT deploy_script
    NO_UNSUPPORTED_PLATFORM_ERROR
)
install(SCRIPT ${deploy_script})
